--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>hello webpack</h1>
-    <script src="../dist/main.js"></script>
+    <div class="box"></div>
+    <div class="box2"></div>
+    <div class="box3"></div>
+    <div class="box4"></div>
+    <script src="../dist/static/js/main.js"></script>
 </body>
 </html>
