--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <div class="box2"></div>
     <div class="box3"></div>
     <div class="box4"></div>
-    <script src="../dist/static/js/main.js"></script>
+    <span class="iconfont icon-erweima"></span>
+    <span class="iconfont icon-fapiao"></span>
+    <span class="iconfont icon-dingdan"></span>
+<!-- 手动引入的通过插件引入    <script src="../dist/static/js/main.js"></script> -->
 </body>
 </html>
